@@ -325,3 +325,9 @@ PHPMAILER_FILE_ACCESS="Could not access file: "
 PHPMAILER_FILE_OPEN="File Error: Could not open file: "
 PHPMAILER_ENCODING="Unknown encoding: "
 PHPMAILER_SIGNING_ERROR="Signing error: "
+PHPMAILER_SMTP_ERROR="SMTP server error: "
+PHPMAILER_EMPTY_MESSAGE="Empty message body"
+PHPMAILER_INVALID_ADDRESS="Invalid address"
+PHPMAILER_VARIABLE_SET="Cannot set or reset variable: "
+PHPMAILER_SMTP_CONNECT_FAILED="SMTP connect failed"
+PHPMAILER_TLS="Could not start TLS"
