@@ -6,8 +6,6 @@
 // no direct access
 defined('_JEXEC') or die;
 
-$PHPMAILER_LANG = array();
-
 $PHPMAILER_LANG["provide_address"] = JText::_('PHPMAILER_PROVIDE_ADDRESS');
 $PHPMAILER_LANG["mailer_not_supported"] = JText::_('PHPMAILER_MAILER_IS_NOT_SUPPORTED');
 $PHPMAILER_LANG["execute"] = JText::_('PHPMAILER_EXECUTE');
@@ -21,3 +19,9 @@ $PHPMAILER_LANG["file_access"] = JText::_('PHPMAILER_FILE_ACCESS');
 $PHPMAILER_LANG["file_open"] = JText::_('PHPMAILER_FILE_OPEN');
 $PHPMAILER_LANG["encoding"] = JText::_('PHPMAILER_ENCODING');
 $PHPMAILER_LANG["signing"]  = JText::_('PHPMAILER_SIGNING_ERROR');
+$PHPMAILER_LANG['smtp_error'] = JText::_('PHPMAILER_SMTP_ERROR');
+$PHPMAILER_LANG['empty_message'] = JText::_('PHPMAILER_EMPTY_MESSAGE');
+$PHPMAILER_LANG['invalid_address'] = JText::_('PHPMAILER_INVALID_ADDRESS');
+$PHPMAILER_LANG['variable_set'] = JText::_('PHPMAILER_VARIABLE_SET');
+$PHPMAILER_LANG['smtp_connect_failed'] = JText::_('PHPMAILER_SMTP_CONNECT_FAILED');
+$PHPMAILER_LANG['tls'] = JText::_('PHPMAILER_TLS');
