@@ -32,6 +32,7 @@ $ -> Language fix or change
  # [#26724] PHP Error Reporting Level cannot be set to "None". (Nikolai Plath)
  $ [#26853] Some bluestork strings are no longer needed due to the commit of 25921 (Peter Chovancak)
  $ [#26857] Wrong English Grammar
+ # [#25565] "Language string failed to load" showing up when sending an email
 
 27-Sep-2011 Christophe Demko
  # [#26640] Code fixes for end of line inconsistencies (partial commit)
